--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<html><head><base href="https://websim.ai/linear-regression-solver-web/" /></head><body>
-<h1>Linear Regression Solver Web Application</h1>
+<html><head><base href="https://websim.ai/linear-regression-solver-shiba-inu/" /></head><body>
+<h1>Updated Linear Regression Solver with Shiba Inu Background</h1>
 
-<p>Sure! I'll create a web application version of the Linear Regression Solver using HTML, CSS, and JavaScript. We'll use Chart.js for plotting and regression-js for performing the linear regression. Here's the code for a simple, interactive web page:</p>
+<p>Certainly! I'll modify the web application to include a Shiba Inu pattern as the background and change the chart background to a light yellow color. Here's the updated HTML code:</p>
 
 <pre><code class="language-html">
 <!DOCTYPE html>
@@ -9,7 +9,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linear Regression Solver</title>
+    <title>Linear Regression Solver - Shiba Inu Edition</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/regression/2.0.1/regression.min.js"></script>
     <style>
@@ -18,6 +18,16 @@
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
+            background-color: #f4e6d2;
+            background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100"><path d="M50 20c-16.5 0-30 13.5-30 30s13.5 30 30 30 30-13.5 30-30-13.5-30-30-30zm0 50c-11 0-20-9-20-20s9-20 20-20 20 9 20 20-9 20-20 20z" fill="%23e0c9a6"/><circle cx="40" cy="45" r="5" fill="%23795548"/><circle cx="60" cy="45" r="5" fill="%23795548"/><path d="M45 60c2.5 2.5 7.5 2.5 10 0" stroke="%23795548" stroke-width="2" fill="none"/></svg>');
+            background-repeat: repeat;
+            color: #333333;
+        }
+        .container {
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         .controls {
             display: flex;
@@ -32,41 +42,54 @@
         canvas {
             max-width: 100%;
             height: auto;
+            background-color: #fffbe6;
+            border-radius: 10px;
+        }
+        input[type="range"] {
+            width: 100%;
+        }
+        input[type="number"] {
+            background-color: #ffffff;
+            color: #333333;
+            border: 1px solid #cccccc;
+            padding: 5px;
         }
     </style>
 </head>
 <body>
-    <h1>Linear Regression Solver</h1>
-    
-    <div class="controls">
-        <div class="control-group">
-            <label for="slope">Slope (a):</label>
-            <input type="range" id="slope" min="-50" max="50" step="0.1" value="1">
-            <span id="slopeValue">1</span>
+    <div class="container">
+        <h1>Linear Regression Solver - Shiba Inu Edition</h1>
+        
+        <div class="controls">
+            <div class="control-group">
+                <label for="slope">Slope (a):</label>
+                <input type="range" id="slope" min="-50" max="50" step="0.1" value="1">
+                <span id="slopeValue">1</span>
+            </div>
+            <div class="control-group">
+                <label for="intercept">Intercept (b):</label>
+                <input type="number" id="intercept" value="0" step="0.1">
+            </div>
+            <div class="control-group">
+                <label for="noise">Noise factor (c):</label>
+                <input type="range" id="noise" min="10" max="100" step="1" value="20">
+                <span id="noiseValue">20</span>
+            </div>
+            <div class="control-group">
+                <label for="points">Number of points (n):</label>
+                <input type="range" id="points" min="100" max="1000" step="10" value="500">
+                <span id="pointsValue">500</span>
+            </div>
         </div>
-        <div class="control-group">
-            <label for="intercept">Intercept (b):</label>
-            <input type="number" id="intercept" value="0" step="0.1">
-        </div>
-        <div class="control-group">
-            <label for="noise">Noise factor (c):</label>
-            <input type="range" id="noise" min="10" max="100" step="1" value="20">
-            <span id="noiseValue">20</span>
-        </div>
-        <div class="control-group">
-            <label for="points">Number of points (n):</label>
-            <input type="range" id="points" min="100" max="1000" step="10" value="500">
-            <span id="pointsValue">500</span>
-        </div>
-    </div>
 
-    <canvas id="regressionChart"></canvas>
+        <canvas id="regressionChart"></canvas>
 
-    <div id="results">
-        <h2>Results</h2>
-        <p>Estimated slope: <span id="estimatedSlope"></span></p>
-        <p>Estimated intercept: <span id="estimatedIntercept"></span></p>
-        <p>R-squared score: <span id="rSquared"></span></p>
+        <div id="results">
+            <h2>Results</h2>
+            <p>Estimated slope: <span id="estimatedSlope"></span></p>
+            <p>Estimated intercept: <span id="estimatedIntercept"></span></p>
+            <p>R-squared score: <span id="rSquared"></span></p>
+        </div>
     </div>
 
     <script>
@@ -96,7 +119,9 @@
                     datasets: [{
                         label: 'Data Points',
                         data: data.map(point => ({ x: point[0], y: point[1] })),
-                        backgroundColor: 'rgba(0, 0, 255, 0.5)'
+                        backgroundColor: 'rgba(0, 0, 255, 0.5)',
+                        pointStyle: 'star',
+                        pointRadius: 6
                     }, {
                         label: 'Regression Line',
                         data: result.points,
@@ -111,6 +136,13 @@
                         x: {
                             type: 'linear',
                             position: 'bottom'
+                        }
+                    },
+                    plugins: {
+                        legend: {
+                            labels: {
+                                color: '#333333'
+                            }
                         }
                     }
                 }
@@ -149,30 +181,31 @@
 </html>
 </code></pre>
 
-<p>To use this web application:</p>
+<p>Here are the main changes I've made to the web application:</p>
 
 <ol>
-  <li>Copy the entire HTML code above and save it as an HTML file (e.g., <code>linear_regression_solver.html</code>).</li>
+  <li>Background: Added a Shiba Inu pattern as an SVG background image. The pattern is embedded directly in the CSS to avoid external dependencies.</li>
+  <li>Chart background: Changed the chart background color to a light yellow (#fffbe6).</li>
+  <li>Overall styling: Updated the color scheme to match the new Shiba Inu theme, with a light tan background for the main content area.</li>
+  <li>Layout: Added a container div to improve readability of the content against the patterned background.</li>
+</ol>
+
+<p>To use this updated web application:</p>
+
+<ol>
+  <li>Copy the entire HTML code above and save it as an HTML file (e.g., <code>linear_regression_solver_shiba_inu.html</code>).</li>
   <li>Open the HTML file in a web browser.</li>
 </ol>
 
-<p>This web application provides the following features:</p>
+<p>This version of the application now includes all the requested features:</p>
 
 <ul>
-  <li>Interactive sliders and input fields for adjusting the parameters (slope, intercept, noise factor, and number of points).</li>
-  <li>A scatter plot of the generated data points (in blue) and the regression line (in red).</li>
-  <li>Real-time updates of the chart and results as you adjust the parameters.</li>
-  <li>Display of the estimated slope, intercept, and R-squared score.</li>
+  <li>Shiba Inu pattern background</li>
+  <li>Light yellow chart background</li>
+  <li>Star-shaped data points</li>
+  <li>English text</li>
 </ul>
 
-<p>The application uses:</p>
-
-<ul>
-  <li>Chart.js for plotting the scatter plot and regression line.</li>
-  <li>regression-js for performing the linear regression calculation.</li>
-  <li>Custom JavaScript to generate the data points and handle user interactions.</li>
-</ul>
-
-<p>This web-based version allows users to interact with the Linear Regression Solver directly in their browser without the need for Python or any additional installations. It provides a similar experience to the Streamlit app but runs entirely in the browser.</p>
+<p>The functionality of the Linear Regression Solver remains unchanged, allowing users to interact with the parameters and visualize the results with star-shaped data points on a light yellow background, all set against a charming Shiba Inu-themed page.</p>
 
 </body></html>
